--- a/aula-03/style.css
+++ b/aula-03/style.css
@@ -1,16 +1,25 @@
 .odin {
-    padding: 10%;
+    width: 100%;
+    height: 600px;
     background-color: maroon;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
 }
 .div-1 {
     background-color: red;
-    width: 300px;
+    width: 150px;
     height: 150px;
-    margin: 0 auto;
 }
 .div-2 {
     background-color: lime;
-    width: 300px;
+    width: 150px;
     height: 150px;
-    margin: 0 auto;
+}
+.div-imagem {
+    width: 150px;
+}
+
+.imagem {
+    width: 100%;
 }
